[gd_scene load_steps=5 format=3 uid="uid://cp416qa6b5s2m"]

[ext_resource type="Script" path="res://scripts/card_instance.gd" id="1_6ebdn"]
[ext_resource type="Texture2D" uid="uid://b47bk6op625de" path="res://sprites/CardArtTest.png" id="2_pak13"]
[ext_resource type="Texture2D" uid="uid://bp1xosxa3qojc" path="res://sprites/CardBaseV2.png" id="2_r7abj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ddpse"]
size = Vector2(192, 288)

[node name="Card" type="Node2D"]
z_index = 2
script = ExtResource("1_6ebdn")

[node name="CardBase" type="Sprite2D" parent="."]
texture = ExtResource("2_r7abj")

[node name="CardArt" type="Sprite2D" parent="."]
position = Vector2(0, -23)
texture = ExtResource("2_pak13")

[node name="CardTitle" type="RichTextLabel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = -142.0
offset_right = 236.0
offset_bottom = -54.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 28
text = "Test"
fit_content = true
scroll_active = false

[node name="CardDescription" type="RichTextLabel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -94.0
offset_top = 32.0
offset_right = 282.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.5, 0.5)
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 18
text = "Test"

[node name="CardArea" type="Area2D" parent="."]

[node name="AreaCollider" type="CollisionShape2D" parent="CardArea"]
position = Vector2(2.08165e-12, 2.08165e-12)
shape = SubResource("RectangleShape2D_ddpse")

[connection signal="mouse_entered" from="CardArea" to="." method="_on_card_area_mouse_entered"]
[connection signal="mouse_exited" from="CardArea" to="." method="_on_card_area_mouse_exited"]
